fix screen sharing images alignment

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -32,3 +32,7 @@
     width: 100%;
     height: 100%;
 }
+
+img[alt="ios-screensharing"] {
+    display: inline;
+}
